# Stock-Transformer

./: .gitignore  README.md  STRUCTURE.md  pyproject.toml  setup.py
config/: data_config.yaml  model_config.yaml  training_config.yaml
notebooks/: 01_data_exploration.ipynb
scripts/: hyperparameter_search.py  run_backtest.py  train_model.py
src/data/: datamodule.py  dataset.py
src/data/collectors/: price_collector.py
src/data/processors/: technical_indicators.py
src/evaluation/: backtester.py  visualization.py
src/models/: lightning_module.py  transformer.py
src/training/: losses.py  metrics.py
src/utils/: logging.py
tests/test_data/: test_collectors.py  test_dataset.py
tests/test_evaluation/: test_metrics.py
tests/test_models/: test_transformer.py
