[tool.poetry]
name = "stock-transformer-predictor"
version = "0.1.0"
description = "Transformer-based stock price prediction system"
authors = ["Nicolas Flake <nicflake@gmail.com>"]
readme = "README.md"
package-mode = false
license = "MIT"
repository = "https://github.com/Fabiaho/Stock-Transformer"
keywords = ["stock-prediction", "transformer", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
# Core ML dependencies
torch = "^2.1.0"
pytorch-lightning = "^2.1.0"
transformers = "^4.36.0"

# Data processing
pandas = "^2.1.0"
numpy = "^1.24.0"
yfinance = "^0.2.33"
pandas-ta = "^0.3.14b0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"

# Development tools
jupyterlab = "^4.0.0"
ipykernel = "^6.27.0"
ipywidgets = "^8.1.0"

# Experiment tracking
tensorboard = "^2.15.0"
wandb = "^0.16.0"
mlflow = "^2.9.0"
rich = "^10.2.2"

# Configuration
hydra-core = "^1.3.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"

# API and data
requests = "^2.31.0"
aiohttp = "^3.9.0"
tqdm = "^4.66.0"

# Database (optional)
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
colorlog = "^6.9.0"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"

# Code quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"

# Debugging
ipdb = "^0.13.13"

[tool.poetry.group.extras]
optional = true

[tool.poetry.group.extras.dependencies]
# Additional data sources
alpha-vantage = "^2.3.1"
finnhub-python = "^2.4.0"

# Advanced ML
optuna = "^3.4.0"
ray = {extras = ["tune"], version = "^2.9.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html --cov-report=term"